# slack-dic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  settings.py  slack_app.py
app/ingestion/: chunk.py  realtime.py  slack_fetch.py  startup.py
app/rag/: answer.py  embed.py  search.py  store.py
app/utils/: slack_links.py
scripts/: ask_cli.py  ingest_all_channels.py  ingest_slack.py  join_all_channels.py  test_chunking.py
