[project]
name = "slack-dic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "openai>=2.7.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "slack-bolt>=1.26.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]
